# DESMI-Python

./: 100-re.py  21-String-Manipulation.py  7-Data-Distribution.py  8-histogram.py  AccessElementsDictionary.py  ArithmeticOperator.py  Floats.py  For-Loops.py  Indexing-list.py  PythonAssignmentOperators.py  PythonComparisonOperators.py  PythonLogicalOperators.py  Python_String_to_list.py  README.md  Read-a-CSV.py  Reading-StandardInputFileinputModule.py  cars.csv  display-list-using-loop.py  filetoload.txt  inputFunctionReadStdin.py  integers_example.py  read-CSV-as-Dictionaries.py  read-CSV-as-List.py
1-Mean/: main.py
10-Normal-Data-Distribution/: main.py
10-hello-world/: main.py
100-re/: main.py
11-Scatter-Plot/: main.py
12-Scatter-Plot-Random-Data-Distributions/: main.py
13-Linear-Regression/: main.py  pyproject.toml
15-Predict-Future-Values/: main.py
16-Predict-Future-Values/: main.py  pyproject.toml
17-Polynomial-Regression/: main.py  pyproject.toml
18-R-Squared/: main.py
19-Predict-Future-Values/: main.py  pyproject.toml
2-Median/: main.py
20-Predict-Future-Values/: main.py
20-Predict-Future-Values-1/: main.py
20-User-input-and-String-Concatenation/: main.py
21-Coefficient/: main.py
22-Scale/: main.py
23-Predict-CO2-Values/: main.py
24-Data-set-you-want-to-test/: main.py
25-Display-the-Training-Set/: main.py
26-Display-the-Testing-Set/: main.py
27-Fit-the-Data-Set/: main.py
28-R2-Data-Set/: main.py
29-Bring-in-the-Testing-Set/: main.py
3-Mode/: main.py
30-Set-Predict-Values/: main.py  pyproject.toml
Set/: main.py
(+117 files in other folders)
